// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentSimpleTableResultsMobile component renders correctly 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile-root-1 DocumentSimpleTableResults-root-9"
  >
    <div
      class="DocumentSimpleTableResultsMobile-listItem-2"
    >
      <div
        class="DocumentSimpleTableResultsMobile-listTitleRow-5"
      >
        <div
          class="DocumentSimpleTableResultsMobile-listIcon-8"
        >
          <svg
            class="DocumentSimpleTableResults-downloadIcon-14 download-icon"
          />
        </div>
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentTitle-3 Typography-root-18 MuiTypography-body1"
          data-testid="typography"
        >
          contentful-document-title
        </p>
      </div>
      <div
        class="DocumentSimpleTableResultsMobile-listDownloadRow-6"
      >
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentType-4 Typography-root-18 MuiTypography-body1"
          data-testid="typography"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-text Button-text-27 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
          href="http://doesnot-exist.com/fileName"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label Button-label-29"
          >
            87.79 KB
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentSimpleTableResultsMobile component renders correctly when valid asset types are used 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile-root-46 DocumentSimpleTableResults-root-54"
  >
    <div
      class="DocumentSimpleTableResultsMobile-listItem-47"
    >
      <div
        class="DocumentSimpleTableResultsMobile-listTitleRow-50"
      >
        <div
          class="DocumentSimpleTableResultsMobile-listIcon-53"
        >
          <svg
            class="DocumentSimpleTableResults-downloadIcon-59 download-icon"
          />
        </div>
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentTitle-48 Typography-root-63 MuiTypography-body1"
          data-testid="typography"
        >
          contentful-document-title
        </p>
      </div>
      <div
        class="DocumentSimpleTableResultsMobile-listDownloadRow-51"
      >
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentType-49 Typography-root-63 MuiTypography-body1"
          data-testid="typography"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-text Button-text-72 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
          href="http://doesnot-exist.com/fileName"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label Button-label-74"
          >
            87.79 KB
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentSimpleTableResultsMobile component renders multiple documents of same asset type as zip file 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile-root-136 DocumentSimpleTableResults-root-144"
  >
    <div
      class="DocumentSimpleTableResultsMobile-listItem-137"
    >
      <div
        class="DocumentSimpleTableResultsMobile-listTitleRow-140"
      >
        <div
          class="DocumentSimpleTableResultsMobile-listIcon-143"
        >
          <svg
            class="DocumentSimpleTableResults-downloadIcon-149 download-icon"
          />
        </div>
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentTitle-138 Typography-root-153 MuiTypography-body1"
          data-testid="typography"
        >
          Pim Document
        </p>
      </div>
      <div
        class="DocumentSimpleTableResultsMobile-listDownloadRow-141"
      >
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentType-139 Typography-root-153 MuiTypography-body1"
          data-testid="typography"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-161 MuiButton-text Button-text-162 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://pimDocument\\"}"
          href="http://pimdocument/"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label Button-label-164"
          >
            10 B
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentSimpleTableResultsMobile component renders pim documents correctly 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile-root-91 DocumentSimpleTableResults-root-99"
  >
    <div
      class="DocumentSimpleTableResultsMobile-listItem-92"
    >
      <div
        class="DocumentSimpleTableResultsMobile-listTitleRow-95"
      >
        <div
          class="DocumentSimpleTableResultsMobile-listIcon-98"
        >
          <svg
            class="DocumentSimpleTableResults-downloadIcon-104 download-icon"
          />
        </div>
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentTitle-93 Typography-root-108 MuiTypography-body1"
          data-testid="typography"
        >
          Pim Document
        </p>
      </div>
      <div
        class="DocumentSimpleTableResultsMobile-listDownloadRow-96"
      >
        <p
          class="MuiTypography-root DocumentSimpleTableResultsMobile-documentType-94 Typography-root-108 MuiTypography-body1"
          data-testid="typography"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-116 MuiButton-text Button-text-117 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://pimDocument\\"}"
          href="http://pimdocument/"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label Button-label-119"
          >
            10 B
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
